--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -5,13 +5,13 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topPanel"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/black"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -39,8 +39,6 @@
                 android:id="@+id/pictureSizeSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/black"
-                android:popupBackground="@color/black"
                 android:spinnerMode="dropdown"
                 android:visibility="visible"
                 tools:visibility="gone" />
@@ -49,8 +47,8 @@
                 android:id="@+id/videoSizeSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/black"
-                android:popupBackground="@color/black"
+                android:background="@color/white"
+                android:popupBackground="@color/white"
                 android:spinnerMode="dropdown"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -62,7 +60,7 @@
             android:id="@+id/flashLayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/black"
+            android:background="@color/white"
             android:orientation="horizontal"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textSize="17sp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +105,7 @@
             tools:text="00:00:00"
             tools:visibility="visible" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/tag"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -115,6 +113,7 @@
             android:adjustViewBounds="true"
             android:padding="12dp"
             android:src="@mipmap/ic_tag"
+            app:tint="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -125,7 +124,7 @@
         android:id="@+id/middle_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/black"
+        android:background="@color/white"
         app:layout_constraintDimensionRatio="9:16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +134,7 @@
             android:id="@+id/camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black"
+            android:background="@color/white"
             android:keepScreenOn="true"
             app:cameraAudio="off"
             app:cameraAutoFocusMarker="@string/cameraview_default_autofocus_marker"
@@ -324,8 +323,7 @@
         android:id="@+id/bottomPanel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alpha="0.5"
-        android:background="@color/black"
+        android:background="@color/white"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/middle_layout">
@@ -368,7 +366,7 @@
         android:id="@+id/modeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/white"
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
         app:layout_constraintTop_toBottomOf="@+id/bottomPanel">
@@ -383,7 +381,7 @@
             android:paddingEnd="5dp"
             android:paddingBottom="3dp"
             android:text="@string/photo"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -426,7 +424,7 @@
             android:paddingEnd="5dp"
             android:paddingBottom="3dp"
             android:text="@string/video"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/captureMode"
             app:layout_constraintTop_toTopOf="parent" />
